--- a/views/signup.html
+++ b/views/signup.html
@@ -50,7 +50,7 @@ padding-top: 10px; padding-right: 10px; margin: 0px auto; background-color: yell
  action="/users/user">
 
     Firstname: <br>
-    <input  class="form-control"  type="text" name="firstname" placeholder="Firstname"/>
+    <input  class="form-control"  type="text" name="name" placeholder="Firstname"/>
         <br>
     Lastname: <br><input  class="form-control"  type="text" name="lastname" placeholder="Lastname"/>
     <br>
