--- a/views/signup.html
+++ b/views/signup.html
@@ -58,13 +58,13 @@ padding-top: 10px; padding-right: 10px; margin: 0px auto; background-color: yell
     <hr style="border-top-color: darkcyan">
     Username: <br><input  class="form-control"  type="text" name="username" placeholder="Username"/>
     <br>
+    Username: <br><input  class="form-control"  type="text" name="email" placeholder="Email"/>
+    <br>
     Password: <br> <input  class="form-control"  type="password" name="password" placeholder="Password"/>
        <br>
     Confirm Password: <br> <input  class="form-control"  type="confirmpassword" placeholder="confirmpassword"/>
     <br>
 
-    <input type="radio" name="user_type" value="employer"> Employer<br>
-    <input type="radio" name="user_type" value="taker"> Taker<br>
   
     <br>
     <input style="text-align: center" type="submit"  class="btn btn-default" title="Add Task"/>
